--- a/estilo/tema.css
+++ b/estilo/tema.css
@@ -7,3 +7,13 @@ body {
 .container {
     padding: 0px 50px;
 }
+
+nav{
+    background-color:cadetblue;
+    border-radius: 10px 10px 10px 10px;
+    color: white;
+    box-shadow: 5px 5px 5px rgb(255, 255, 255);
+    display:flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
